--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,14 @@
     <string name="app_name">Pomodoro</string>
     <string name="start">Start</string>
     <string name="pause">Pause</string>
-    <string name="cicle_0">Pomodoro</string>
-    <string name="cicle_1">Short Break</string>
-    <string name="cicle_2">Long Break</string>
+    <string name="txt_timer">Pomodoro</string>
+    <string name="txt_shortBreak">Short Break</string>
+    <string name="txt_longBreak">Long Break</string>
     <string name="timer">00:00</string>
+    <string name="setting_txt">Settings</string>
+    <string name="setting_txt_timer">Timer:</string>
+    <string name="setting_txt_short_break">Short Break:</string>
+    <string name="setting_txt_long_break">Long Break:</string>
+
+
 </resources>
