--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="setting_txt_timer">Timer:</string>
     <string name="setting_txt_short_break">Short Break:</string>
     <string name="setting_txt_long_break">Long Break:</string>
+    <string name="save">SAVE</string>
+    <string name="minutes">min</string>
 
 
 </resources>
